{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 1919,
  "lineage": "9a128447-efc9-9af9-ca00-d137c96d87a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-021bd6589bbc29eca",
            "arn": "arn:aws:ec2:us-east-1:248179617249:elastic-ip/eipalloc-021bd6589bbc29eca",
            "association_id": "eipassoc-08bbddc485ec3cd9e",
            "domain": "vpc",
            "id": "eipalloc-021bd6589bbc29eca",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a7d5f4130249d38b",
            "private_dns": "ip-10-0-4-71.ec2.internal",
            "private_ip": "10.0.4.71",
            "public_dns": "ec2-44-194-91-58.compute-1.amazonaws.com",
            "public_ip": "44.194.91.58",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "NAT-A-EIP"
            },
            "tags_all": {
              "Name": "NAT-A-EIP"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "eipalloc-021bd6589bbc29eca",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:internet-gateway/igw-0cc3c66c26cb0c143",
            "id": "igw-0cc3c66c26cb0c143",
            "owner_id": "248179617249",
            "region": "us-east-1",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-08e6ac44626e20bf0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "igw-0cc3c66c26cb0c143",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Terraform_ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:loadbalancer/app/test-lb-tf/7923dddbcb70820c",
            "arn_suffix": "app/test-lb-tf/7923dddbcb70820c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-1920533376.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:248179617249:loadbalancer/app/test-lb-tf/7923dddbcb70820c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0e3d0c50be23b1f5f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0455eab2826934063"
              },
              {
                "subnet_id": "subnet-057dc77d3f407d40a"
              }
            ],
            "subnets": [
              "subnet-0455eab2826934063",
              "subnet-057dc77d3f407d40a"
            ],
            "tags": {
              "Environment": "Development"
            },
            "tags_all": {
              "Environment": "Development"
            },
            "vpc_id": "vpc-08e6ac44626e20bf0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:loadbalancer/app/test-lb-tf/7923dddbcb70820c"
          },
          "dependencies": [
            "aws_security_group.Security_Rules",
            "aws_subnet.ALB-Subnet",
            "aws_subnet.ALB-Subnet-B",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:listener/app/test-lb-tf/7923dddbcb70820c/93fecb11bf1264c3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:targetgroup/tf-example-lb-tg/7fb08309c49e94e1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:248179617249:listener/app/test-lb-tf/7923dddbcb70820c/93fecb11bf1264c3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:loadbalancer/app/test-lb-tf/7923dddbcb70820c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:listener/app/test-lb-tf/7923dddbcb70820c/93fecb11bf1264c3"
          },
          "dependencies": [
            "aws_lb.Terraform_ALB",
            "aws_lb_target_group.target_group",
            "aws_security_group.Security_Rules",
            "aws_subnet.ALB-Subnet",
            "aws_subnet.ALB-Subnet-B",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:targetgroup/tf-example-lb-tg/7fb08309c49e94e1",
            "arn_suffix": "targetgroup/tf-example-lb-tg/7fb08309c49e94e1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:248179617249:targetgroup/tf-example-lb-tg/7fb08309c49e94e1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:248179617249:loadbalancer/app/test-lb-tf/7923dddbcb70820c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08e6ac44626e20bf0"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:targetgroup/tf-example-lb-tg/7fb08309c49e94e1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-021bd6589bbc29eca",
            "association_id": "eipassoc-08bbddc485ec3cd9e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-09964a9eaa647e8b9",
            "network_interface_id": "eni-0a7d5f4130249d38b",
            "private_ip": "10.0.4.71",
            "public_ip": "44.194.91.58",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-052af44384402a2ce",
            "tags": {
              "Name": "gw NAT A"
            },
            "tags_all": {
              "Name": "gw NAT A"
            },
            "vpc_id": "vpc-08e6ac44626e20bf0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "nat-09964a9eaa647e8b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.gw",
            "aws_subnet.NAT-Subnet",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:network-interface/eni-02ee099cc7bd45fba",
            "id": "eni-02ee099cc7bd45fba",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:ff:e2:af:e8:61",
            "owner_id": "248179617249",
            "private_ip": "10.0.1.10",
            "private_ip_list": [
              "10.0.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.10"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-0e3d0c50be23b1f5f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06613d8305139225b",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "eni-02ee099cc7bd45fba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Security_Rules",
            "aws_subnet.Terraform_Web_Subnet_A",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ALB-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:route-table/rtb-020406acf0cb0b0b5",
            "id": "rtb-020406acf0cb0b0b5",
            "owner_id": "248179617249",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc3c66c26cb0c143",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ALB RT"
            },
            "tags_all": {
              "Name": "ALB RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e6ac44626e20bf0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtb-020406acf0cb0b0b5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:route-table/rtb-0e5011ccdde50ccb5",
            "id": "rtb-0e5011ccdde50ccb5",
            "owner_id": "248179617249",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09964a9eaa647e8b9",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e6ac44626e20bf0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtb-0e5011ccdde50ccb5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_a",
            "aws_subnet.NAT-Subnet",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:route-table/rtb-09e11806a986ff00f",
            "id": "rtb-09e11806a986ff00f",
            "owner_id": "248179617249",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc3c66c26cb0c143",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e6ac44626e20bf0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtb-09e11806a986ff00f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assosiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f92fea151e842cef",
            "region": "us-east-1",
            "route_table_id": "rtb-0e5011ccdde50ccb5",
            "subnet_id": "subnet-06613d8305139225b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtbassoc-0f92fea151e842cef",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_a",
            "aws_route_table.RT",
            "aws_subnet.NAT-Subnet",
            "aws_subnet.Terraform_Web_Subnet_A",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assosiation_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075fd14444e8135a8",
            "region": "us-east-1",
            "route_table_id": "rtb-020406acf0cb0b0b5",
            "subnet_id": "subnet-0455eab2826934063"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtbassoc-075fd14444e8135a8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.ALB-RT",
            "aws_subnet.ALB-Subnet",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assosiation_alb_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d2344018e8db344",
            "region": "us-east-1",
            "route_table_id": "rtb-020406acf0cb0b0b5",
            "subnet_id": "subnet-057dc77d3f407d40a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtbassoc-05d2344018e8db344",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.ALB-RT",
            "aws_subnet.ALB-Subnet-B",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assosiation_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f83f13ab457d1bb",
            "region": "us-east-1",
            "route_table_id": "rtb-0e5011ccdde50ccb5",
            "subnet_id": "subnet-08d462775b0234c08"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtbassoc-02f83f13ab457d1bb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_a",
            "aws_route_table.RT",
            "aws_subnet.NAT-Subnet",
            "aws_subnet.Terraform_Web_Subnet_B",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assosiation_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bc22d818cbd4e11",
            "region": "us-east-1",
            "route_table_id": "rtb-09e11806a986ff00f",
            "subnet_id": "subnet-052af44384402a2ce"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtbassoc-05bc22d818cbd4e11",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.RT-NAT",
            "aws_subnet.NAT-Subnet",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security_Rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:security-group/sg-0e3d0c50be23b1f5f",
            "description": "Security Rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3d0c50be23b1f5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Security Rules Terraform Capstone",
            "name_prefix": "",
            "owner_id": "248179617249",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Rules"
            },
            "tags_all": {
              "Name": "Security Rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e6ac44626e20bf0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "sg-0e3d0c50be23b1f5f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ALB-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:subnet/subnet-0455eab2826934063",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0455eab2826934063",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248179617249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ALB SUBNET"
            },
            "tags_all": {
              "Name": "ALB SUBNET"
            },
            "vpc_id": "vpc-08e6ac44626e20bf0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "subnet-0455eab2826934063",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ALB-Subnet-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:subnet/subnet-057dc77d3f407d40a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057dc77d3f407d40a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248179617249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ALB subnet B"
            },
            "tags_all": {
              "Name": "ALB subnet B"
            },
            "vpc_id": "vpc-08e6ac44626e20bf0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "subnet-057dc77d3f407d40a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "NAT-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:subnet/subnet-052af44384402a2ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052af44384402a2ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248179617249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "NAT subnet"
            },
            "tags_all": {
              "Name": "NAT subnet"
            },
            "vpc_id": "vpc-08e6ac44626e20bf0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "subnet-052af44384402a2ce",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terraform_Web_Subnet_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:subnet/subnet-06613d8305139225b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06613d8305139225b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248179617249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Subnet A"
            },
            "tags_all": {
              "Name": "Subnet A"
            },
            "vpc_id": "vpc-08e6ac44626e20bf0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "subnet-06613d8305139225b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terraform_Web_Subnet_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:subnet/subnet-08d462775b0234c08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d462775b0234c08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248179617249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Subnet B"
            },
            "tags_all": {
              "Name": "Subnet B"
            },
            "vpc_id": "vpc-08e6ac44626e20bf0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "subnet-08d462775b0234c08",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terraform_Web_Vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:vpc/vpc-08e6ac44626e20bf0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ffef5635a9dfae59",
            "default_route_table_id": "rtb-08940d9fbf769d66c",
            "default_security_group_id": "sg-059f9eaddb38f6974",
            "dhcp_options_id": "dopt-0887dd194bead1d4d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e6ac44626e20bf0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08940d9fbf769d66c",
            "owner_id": "248179617249",
            "region": "us-east-1",
            "tags": {
              "Name": "Terraform Web VPC"
            },
            "tags_all": {
              "Name": "Terraform Web VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "vpc-08e6ac44626e20bf0",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:security-group-rule/sgr-0a5192a4cb3192d21",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a5192a4cb3192d21",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e3d0c50be23b1f5f",
            "security_group_rule_id": "sgr-0a5192a4cb3192d21",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "sgr-0a5192a4cb3192d21",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Security_Rules",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:security-group-rule/sgr-00e30c9d327793df4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-00e30c9d327793df4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e3d0c50be23b1f5f",
            "security_group_rule_id": "sgr-00e30c9d327793df4",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "sgr-00e30c9d327793df4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Security_Rules",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:security-group-rule/sgr-056e30dccb30f0f22",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-056e30dccb30f0f22",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e3d0c50be23b1f5f",
            "security_group_rule_id": "sgr-056e30dccb30f0f22",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "sgr-056e30dccb30f0f22",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Security_Rules",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    }
  ]
}